# ResearchGym

./: .env.example  .gitattributes  .gitignore  README.md  __init__.py  package-lock.json  pyproject.toml  run_agent.py  run_inspector.py
agents/: CLAUDE.md  README.md  ai_scientist_adapter.py  basic_agent_adapter.py  basic_agent_evolution_adapter.py  inspection_agent_adapter.py  ml_master_adapter.py  openevolve_adapter.py
agents/AI-Scientist-v2/: README.md  requirements.txt
agents/AI-Scientist-v2/ai_scientist/: llm.py  perform_vlm_review.py
agents/BasicAgent/: README.md  __init__.py  cost_tracker.py  start.py
agents/BasicAgentEvolution/: cost_logger.py  cost_tracker.py  start.py
agents/ClaudeCode/: README.md  __init__.py  adapter.py  config.py  cost_tracker.py  hooks.py  messages.py  requirements.txt  run_cli.py  runner.py
agents/Codex/: README.md  __init__.py  adapter.py  config.py  cost_tracker.py  messages.py  post_processor.py  requirements.txt  run_cli.py  runner.py
agents/InspectionAgent/: README.md  _tools.py  start.py
agents/ML-Master/: requirements.txt
agents/ML-Master/agent/: mcts_agent.py
environment/: __init__.py
environment/containers/: Dockerfile.ai-scientist  Dockerfile.base  Dockerfile.basic-agent  Dockerfile.ml-master  __init__.py
environment/runtime/: __init__.py  docker_runner.py  uv_runner.py
environment/scripts/: build_images.sh  detect_gpu.py  install_requirements.py  install_requirements.sh
tasks/: paper_task_mapping.txt
utils/: cost_summary_parser.py  global_claude_tracker.py  llm.py  logging.py  parse_total_cost.py
(+166 files in other folders)
